  * Add support to enable or disable color in the source window.
    The default is enabled. See the documentation for more information.

  * Add support for showing colors in the debug window. If gdb or the
    program being debugged output an ansi escape code representing color,
        https://en.wikipedia.org/wiki/ANSI_escape_code#Colors
    then cgdb will display the corresponding color instead of the escape
    code. This option is configurable with the set debugwincolor option.

  * Add the winminwidth option to CGDB. It controls the minimum width
    that a window can be resized. It corresponds to the winminheight
    option. This was introduced now that CGDB can have vertically split
    windows.

  * Add support for vertical or horizontal splitting of the CGDB/GDB
    windows. Thanks to Daniel Cohen for the original implementation
    of this idea! You can change the window orientation by using the
    command 'set winsplitorientation=horizontal or vertical'.
    horizontal is the default orientation.

  * Remove the TTY mode and TTY window from CGDB. This previously allowed
    you to send input to the program being debugged through the TTY
    window in CGDB. It is better for the user to run their program in
    one terminal and attach to it with CGDB from another terminal in
    order to get terminal input and terminal output working correctly.

  * Add the -w command line option to CGDB. It directs CGDB to wait
    to start until either a debugger is attached to it, or until a key
    is written to it's stdin. This helps simplify debugging cgdb itself.

  * Added GDB scroll mode in addition to the existing GDB command mode.
    To enter scroll mode, type 'page up' when in GDB mode and to exit
    type 'q', 'i' or 'Enter'. In scroll mode, you can scroll through
    the GDB output.

  * Extended support for the G command when in CGDB mode. The new supported
    syntax is [<number>]G, allowing users to jump to a specific line within